<resources>
    <string name="app_name" translatable="false">DevLex</string>
    <!-- Strings used for fragments for navigation -->
    <string name="open_nav" translatable="false">Open Navigation Drawer</string>
    <string name="close_nav" translatable="false">Close Navigation Drawer</string>

    <string name="add_value_to_database">Add</string>
    <string name="english_name">English word</string>
    <string name="russian_name">Russian word</string>
    <string name="Definition">Definition</string>
    <string name="procent_score">Procent score</string>
    <string name="score">Score</string>
    <string name="id" translatable="false">Id</string>
    <string name="english_version_of_word">English version of word</string>
    <string name="russian_version_of_word">Russian version of word</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="hey_there">Hey there!</string>
    <string name="developer_ivanov_sergey">Developer: Ivanov Sergey</string>
    <string name="source_code_on">Source code on</string>
    <string name="start">Start</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="result">Result</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="finish">Finish</string>
    <string name="true_answer" translatable="false">True</string>
    <string name="false_answer" translatable="false">False</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="find_translation_test">Find translation test</string>
    <string name="count_of_rounds">Count of rounds</string>
    <string name="find_word_test">Find word test</string>
    <string name="history">History</string>
    <string name="statistic">Statistic</string>
    <string name="average_procent_score">Average procent score:</string>
    <string name="average_score">Average score:</string>
    <string name="true_false_test">True/False test</string>
    <string name="dash" translatable="false">-</string>
    <string name="lexicon">Lexicon</string>
    <string name="change_database">Change database</string>
    <string name="your_score_is_out_of">Your Score is %1$s out of %2$s.</string>
    <string name="putting_result_to_database" translatable="false">%1$s/%2$s</string>
    <string name="go_to_next_question">Go to next question</string>
    <string name="refresh_database">Refresh</string>
    <string name="en" translatable="false">En</string>
    <string name="ru" translatable="false">Ru</string>
    <string name="is">is</string>
    <string name="ru_en" translatable="false">Ru/En</string>
    <string name="cant_use_zero">You can\'t use 0</string>
    <string name="random_english_word">Random english word</string>
    <string name="random_russian_word">Random russian word</string>
    <string name="language">Language</string>
    <string name="sure_want_delete">You sure you wan\\\'t to delete?</string>
    <string name="definition_not_necessary">Definition(not necessary)</string>
    <string name="cancel">Cancel</string>
    <string name="turn" translatable="false">Turn:</string>
    <string name="player">Don\'t let the dude die</string>
    <string name="play">Start Game</string>
    <string name="hangman" translatable="false">Hangman</string>
    <string name="guess">Guess</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="trystring">try</string>
    <string name="hangman_game">Hangman game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="a_z" translatable="false"><![CDATA[A>Z]]></string>
    <string name="good_gues">Good guess!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="boo_you_hanged_a_man">Boo! You hanged a man!</string>
    <string name="do_you_want_to_play_again">Do you want to play again?</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="new_game_started">New game started!</string>
    <string name="no">No</string>
    <string name="no_data_found">No data found</string>
    <string name="answer">Answer</string>
    <string name="find_translation_test2">Find translation\n</string>
    <string name="find_word_test2">Find word</string>
    <string name="true_false_test2" translatable="false">True/False</string>
    <string name="hangman_game2">\"Hangman\"</string>
    <string name="find_translation_test3">Find translation</string>
</resources>