<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_words"
            android:icon="@drawable/lexicon"
            android:title="@string/lexicon" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/statistic"
            android:title="@string/statistic" />


    </group>
    <group>
        <item android:title="" />
        <item
            android:id="@+id/nav_true_false_test"
            android:icon="@drawable/true_false"
            android:title="@string/true_false_test" />
        <item
            android:id="@+id/nav_find_word_test"
            android:icon="@drawable/find_word"
            android:title="@string/find_word_test" />
        <item
            android:id="@+id/nav_find_translation_test"
            android:icon="@drawable/find_translation"
            android:title="@string/find_translation_test"

            />
    </group>

    <group>

        <item android:title="" />

        <item
            android:id="@+id/nav_edit_database"
            android:icon="@drawable/editing"
            android:title="@string/change_database" />

    </group>

</menu>